# Regestration_FPMI_bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py
app/handlers/: admin.py  states.py  user.py
app/jobs/: celery_app.py  tasks.py
app/keyboards/: admin.py  common.py  events.py
app/middlewares/: __init__.py  hide_used_inline_keyboard.py
app/models/: __init__.py  entities.py  enums.py
app/repositories/: admins.py  common.py  deliveries.py  events.py  registrations.py  users.py
app/services/: admin_service.py  event_service.py  exceptions.py  export_service.py  notification_service.py  profile_service.py  publication_service.py  registration_service.py  schemas.py
app/utils/: datetime.py  security.py  text.py
examples/exports/: sample_all.csv  sample_passes.csv
hb_fpmi_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
migrations/versions/: 20260227_0001_init.py  20260227_0002_event_channel_schedule.py  20260227_0003_delivery_kind_registration_notifications.py  20260306_0004_passport_minimal_fields.py  20260306_0005_user_profile_mipt_passport.py  20260307_0006_user_mipt_status_nullable.py
tests/: conftest.py  test_event_repository.py  test_event_service.py  test_registration_service.py  test_status_smoke.py  test_user_repository.py
